{
  "version": 4,
  "terraform_version": "1.0.10",
  "serial": 247,
  "lineage": "26f0e945-bfc6-7453-a107-ad3fcfdef375",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "thiagocloud_monitor_static_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.149.161.140",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2021-11-14T11:35:53.078-08:00",
            "id": "projects/dxxr-331522/global/addresses/thiagocloud-monitor-static-ip",
            "name": "thiagocloud-monitor-static-ip",
            "prefix_length": 0,
            "project": "dxxr-331522",
            "self_link": "https://www.googleapis.com/compute/v1/projects/dxxr-331522/global/addresses/thiagocloud-monitor-static-ip"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "thiagocloud_static_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.149.14.104",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2021-11-14T11:35:53.080-08:00",
            "id": "projects/dxxr-331522/global/addresses/thiagocloud-static-ip",
            "name": "thiagocloud-static-ip",
            "prefix_length": 0,
            "project": "dxxr-331522",
            "self_link": "https://www.googleapis.com/compute/v1/projects/dxxr-331522/global/addresses/thiagocloud-static-ip"
          }
        }
      ]
    },
    {
      "module": "module.app_deploy",
      "mode": "managed",
      "type": "kubernetes_ingress",
      "name": "ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "default/ingress-guestbook",
            "metadata": [
              {
                "annotations": {
                  "kubernetes.io/ingress.global-static-ip-name": "thiagocloud-static-ip"
                },
                "generate_name": "",
                "generation": 1,
                "labels": {
                  "app": "ingress-nginx"
                },
                "name": "ingress-guestbook",
                "namespace": "default",
                "resource_version": "3445",
                "uid": "fcb26583-1a1d-4726-91e5-0b66a08468fd"
              }
            ],
            "spec": [
              {
                "backend": [
                  {
                    "service_name": "guestbook",
                    "service_port": "8080"
                  }
                ],
                "ingress_class_name": "",
                "rule": [
                  {
                    "host": "",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "service_name": "guestbook",
                                "service_port": "8080"
                              }
                            ],
                            "path": "/"
                          },
                          {
                            "backend": [
                              {
                                "service_name": "guestbook",
                                "service_port": "8080"
                              }
                            ],
                            "path": "/controllers.js"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "",
                        "ip": "34.149.14.104"
                      }
                    ]
                  }
                ]
              }
            ],
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.app_deploy.time_sleep.wait_30_seconds",
            "module.kubernetes_cluster.google_container_cluster.primary",
            "module.vpc_network.google_compute_network.ntw",
            "module.app_deploy.helm_release.myapp",
            "module.app_deploy.null_resource.next"
          ]
        }
      ]
    },
    {
      "module": "module.fw_ssh",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-11-14T11:36:26.082-08:00",
            "deny": [],
            "description": "Allow SSH for everyone",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/dxxr-331522/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/dxxr-331522/global/networks/my-cluster-network",
            "priority": 1000,
            "project": "dxxr-331522",
            "self_link": "https://www.googleapis.com/compute/v1/projects/dxxr-331522/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_network.google_compute_network.ntw"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_network",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "ntw",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "description": "K8s cluster network",
            "id": "projects/dxxr-331522/global/networks/my-cluster-network",
            "mtu": 0,
            "name": "my-cluster-network",
            "project": "dxxr-331522",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/dxxr-331522/global/networks/my-cluster-network"
          }
        }
      ]
    }
  ]
}